# NtCallExt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md
NtCallExt/: NtCallExt.cpp  NtCallExt.vcxproj  NtCallExt.vcxproj.filters
cmake_utils/: auto_refactor_headers.cmake
examples/: main.cpp
src/: CMakeLists.txt  Config.h  NtApi.h  NtCallExt.cpp  NtCallExt.h  NtExt.hpp  Wow64NtCallExt.cpp  Wow64NtCallExt.h  X64NtCallExt.cpp  X64NtCallExt.h
src/internal/: ScopeAction.hpp
src/internel/: NtApi.h  NtAsm.h
src/invoker/: InvokerBase.hpp  NtExtInvokers.hpp
src/invoker/wow64/: Wow64Invoker.hpp  Wow64Syscall.hpp
src/invoker/x64/: X64Syscall.hpp
src/pch/: stdafx.h
src/resolver/: ResolverBase.cpp  ResolverBase.hpp
src/resolver/wow64/: Wow64Resolver.cpp  Wow64Resolver.hpp
src/resolver/x64/: X64Resolver.cpp  X64Resolver.hpp
